2010-10-01	Ralf CorsÃ©pius <ralf.corsepius@rtems.org>

	* configure.ac: Check for pthread_attr_{get,set}cputime instead of 
	pthread_pthread_attr_{get,set}cputime (Typo).

2010-09-28	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* psx15/.cvsignore, psx15/Makefile.am, psx15/init.c, psx15/psx15.scn:
	New files.
	* Makefile.am, configure.ac: Reflect changes above.

2010-08-30	Ralf CorsÃ©pius <ralf.corsepius@rtems.org>

	* configure.ac: AC_CHECK_DECLS([seteuid]).
	* psximfs02/init.c: Provide decl for seteuid if not provided by
	libc.

2010-08-30	Ralf CorsÃ©pius <ralf.corsepius@rtems.org>

	* psxenosys/init.c, psxenosys/psxenosys.doc,
	psxenosys/psxenosys.scn: Remove devctl.

2010-08-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxenosys/init.c, psxenosys/psxenosys.scn: Update to reflect some of
	aio being implemented.

2010-08-19	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* psxenosys/init.c, psxenosys/psxenosys.scn: Update to reflect AIO
	submission.

2010-08-19	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* psxaio01/.cvsignore, psxaio02/.cvsignore: New files.

2010-08-16	Alin Rus <alin.codejunkie@gmail.com>

	* Makefile.am, configure.ac: Add psxaio01/, psxaio02/.
	* psxaio01/Makefile.am, psxaio01/init.c, psxaio01/psxaio01.scn,
	psxaio01/system.h: New. 
	* psxaio02/Makefile.am, psxaio02/init.c, psxaio02/psxaio02.scn,
	psxaio02/system.h: New.

2010-08-10	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1598/testing
	* psxpasswd02/init.c, psxpasswd02/psxpasswd02.scn: New test case
	added to improve coverage of getpwent.c.

2010-08-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1665/testing
	* psximfs02/init.c: Fix uninitialized variable warning.

2010-08-09	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1661/testing
	* psximfs02/init.c: Changes to improve coverage of
	imfs_initsupp.c, by using a bad value for
	CONFIGURE_IMFS_MEMFILE_BYTES_PER_BLOCK

2010-08-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1661/testing