@@ -41,9 +41,25 @@ AC_CHECK_DECLS([pthread_atfork],[],[],[[#include <pthread.h>]])
 # Likely an anachronism in RTEMS.
 AC_CHECK_DECLS([pthread_attr_getcputime],[],[],[[#include <pthread.h>]])
 
+# FIXME: RTEMS presumes pthread_attr_getcputime to be IEEE Std 1003.1
+# Likely an anachronism in RTEMS.
+AC_CHECK_DECLS([pthread_attr_getcputime],[],[],[[#include <pthread.h>]])
+
 # FIXME: RTEMS presumes pthread_attr_setcputime to be IEEE Std 1003.1
 # Likely an anachronism in RTEMS.
 AC_CHECK_DECLS([pthread_attr_setcputime],[],[],[[#include <pthread.h>]])
+
+# Added to pthreads after initial revision.  May not be in toolset
+AC_CHECK_DECLS([pthread_attr_getstack],[],[],[[#include <pthread.h>]])
+
+# Added to pthreads after initial revision.  May not be in toolset
+AC_CHECK_DECLS([pthread_attr_setstack],[],[],[[#include <pthread.h>]])
+
+# Added to pthreads after initial revision.  May not be in toolset
+AC_CHECK_DECLS([pthread_attr_getguardsize],[],[],[[#include <pthread.h>]])
+
+# Added to pthreads after initial revision.  May not be in toolset
+AC_CHECK_DECLS([pthread_attr_setguardsize],[],[],[[#include <pthread.h>]])
 
 # FIXME: adjtime is a non-standardized BSD/Linux extension
 # RTEMS should not rely on adjtime
@@ -129,6 +145,7 @@ psxsignal05/Makefile
 psxspin01/Makefile
 psxspin02/Makefile
 psxstack01/Makefile
+psxstack02/Makefile
 psxstat/Makefile
 psxsysconf/Makefile
 psxtime/Makefile
